ajout de header

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Document</title>
 </head>
 <body>
+    <header>
+        <div>Je suis l'en-tete</div>
+    </header>
     
 </body>
 </html>
