ajout de footer

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <header>
         <div>Je suis l'en-tete</div>
     </header>
+    <footer>
+        <p>mon pied de page</p>
+    </footer>
     
 </body>
 </html>
