--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <footer>
         <p>mon pied de page</p>
     </footer>
+    <ul>
+        <li>daniel</li>
+    </ul>
     
 </body>
 </html>
