ajout de fichier css

--- a/index.html
+++ b/index.html
@@ -13,11 +13,7 @@
         <p>mon pied de page</p>
     </footer>
     <ul>
-        <li>daniel</li>
-        <li>cephas</li>
-        <li>Adie</li>
-        <li>Cephas Kouame</li>
-        
+        <li>je dois la giffler</li>
     </ul>
     
 </body>
