Ajout de la nouvelle version

--- a/Iindex.html
+++ b/Iindex.html
@@ -4,17 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <div>Je suis l'en-tete</div>
-    </header>
-    <footer>
-        <p>mon pied de page</p>
-    </footer>
-    <ul>
-        <li>je dois la giffler</li>
-    </ul>
+
+    <h1>Bienvenue sur mon site</h1>
     
 </body>
 </html>
