--- a/index.html
+++ b/index.html
@@ -9,7 +9,13 @@
 <body>
 
     <h1>Bienvenue sur mon site</h1>
-    
+
+    <!-- cretion de liste -->
+    <ul>
+        <li>ADIE</li>
+        <li>DANIEL</li>
+        <li>CEPHAS</li>
+    </ul>
     
 </body>
 </html>
