--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-    <h1>Bienvenue sur mon site</h1>
+    <h1>Bienvenue sur mon site VERIFICATION</h1>
 
     <!-- cretion de liste -->
     <ul>
