--- a/index.html
+++ b/index.html
@@ -9,13 +9,9 @@
 <body>
 
     <h1>Bienvenue sur mon site</h1>
-
-    <!-- cretion de liste -->
-    <ul>
-        <li>ADIE</li>
-        <li>DANIEL</li>
-        <li>CEPHAS</li>
-    </ul>
+    <div class="container">
+        <a href="#">un lien</a>
+    </div>
     
 </body>
 </html>
